# SAP-Attack

./: readme.md
experiments/: ex1.txt
python_src/: plot.ipynb
results/alpha_enron/: alpha_100.txt  alpha_1000.txt  alpha_3000.txt  alpha_500.txt
results/defense_enron/: defense_100_clrz.txt  defense_100_default.txt  defense_500_CLRZ.txt  defense_500_default.txt
results/offset_enron/: offset_1000_100.txt  offset_1000_5.txt  offset_100_100.txt  offset_100_5.txt  offset_500_100.txt  offset_500_5.txt
results/quantity_enron/: quantity_100.txt  quantity_1000.txt  quantity_1500.txt  quantity_300.txt  quantity_600.txt
src/: CMakeLists.txt  attack.cpp  attack.hpp  clrzdefense.cpp  clrzdefense.hpp  dataset.cpp  dataset.hpp  defense.cpp  defense.hpp  experiment.cpp  experiment.hpp  helpers.cpp  helpers.hpp  main.cpp  manager.cpp  manager.hpp  sapattack.cpp  sapattack.hpp
src/hungarian/: CMakeLists.txt  Hungarian.cpp  Hungarian.h
